# mopmc-dev

./: .gitignore  CMakeLists.txt  README.md  build.sh  configure.sh  run.sh  warehouse-script.py
deprecated/: GraphAnalysis.cpp  GraphAnalysis.h  ModelChecker.cpp  ModelChecker.h  MultiObjective.cpp  MultiObjective.h  SparseModel.cpp  SparseModel.h
examples/: bluetooth.pm  die.pctl  die3.pctl  messagesA.pctl  multiobj_consensus2_3_2.pctl  multiobj_scheduler05.pctl  mutual-exclusion.nm  par-die.pm  simple-mdp.pctl
examples/dive_and_rise/: dive_and_rise.nm  dive_and_rise_prop_100.props  dive_and_rise_prop_20.props  dive_and_rise_prop_30.props  dive_and_rise_prop_40.props  dive_and_rise_prop_60.props  dive_and_rise_prop_80.props
examples/multiple_targets/: multiple_targets.pm  multiple_targets_10.props  multiple_targets_11.props  multiple_targets_21c.props  multiple_targets_4.props  multiple_targets_6.props  multiple_targets_6c.props  multiple_targets_7.props  multiple_targets_prob_4.props
examples/non_multiple_objective_examples/: die.pctl  egl.pm  leader4.nm  simple-mdp.nm  two_dice.pctl
examples/warehouse_tests/: wh-2-2.nm  wh-5-1-2.nm  wh-5-2-2.nm  whouse_tasks.pctl
lpSolve/: lp_lib.h
misc/: ProjectedGradientDescent.ipynb  frank-wolfe.ipynb
src/: CMakeLists.txt  main.cpp
src/mopmc-src/: CMakeLists.txt  Data.cpp  Data.h  ExplicitModelBuilder.cpp  ExplicitModelBuilder.h  ModelBuilding.cpp  ModelBuilding.h  Preprocessing.cpp  Preprocessing.h  Preprocessor.cpp  Preprocessor.h  QueryData.h  QueryOptions.h  Runner.cpp  Runner.h  SparseModel.cpp  SparseModel.h  SparseModel2.cpp  SparseModel2.h  StormModelCheckingWrapper.h  Transformation.cpp  Transformation.h
src/mopmc-src/_legacy/: CMakeLists.txt  ExplicitModelBuilder.cpp
src/mopmc-src/_legacy/model-checking/: CMakeLists.txt  MOPMCModelChecking.cpp  MOPMCModelChecking.h  SparseMultiObjective.cpp
src/mopmc-src/_legacy/solvers/: CMakeLists.txt  CuVISolver.cpp  CuVISolver.h  CudaOnlyValueIteration.cpp  InducedEquationSolver.cpp
src/mopmc-src/convex-functions/: BaseConvexFunction.cpp  BaseConvexFunction.h  CMakeLists.txt  EuclideanDistance.cpp  EuclideanDistance.h  KLDistance.cpp  KLDistance.h  MSE.cpp  MSE.h  SignedKLEuclidean.cpp  SignedKLEuclidean.h  TotalReLU.cpp  TotalReLU.h  Variance.cpp  Variance.h
src/mopmc-src/convex-functions/auxiliary/: CMakeLists.txt  Lincom.cpp  Lincom.h
src/mopmc-src/cuda/: ActionSelection.cu  WarmUp.cu  WarmUp.h
src/mopmc-src/hybrid-computing/: CMakeLists.txt  HybridController.h  HybridThreadLib.cpp  HybridThreadLib.h  Looper.cpp  Looper.h  Problem.cpp  Problem.h  Utilities.cpp  Utilities.h
src/mopmc-src/model-checking/: CMakeLists.txt  GraphAnalysis.cpp  GraphAnalysis.h  MOPMCModelChecking.cpp  MOPMCModelChecking.h  ModelChecker.cpp  ModelChecker.h  ModelCheckingUtils.cpp  ModelCheckingUtils.h  MultiObjective.cpp  MultiObjective.h  MultiObjectivePreprocessor.cpp  MultiObjectivePreprocessor.h  MultiObjectiveTest.cpp  MultiObjectiveTest.h  SparseMultiObjective.cpp  SparseMultiObjective.h  StandardMdpPcaaChecker.cpp  StandardMdpPcaaChecker.h
src/mopmc-src/optimizers/: BaseOptimizer.h  CMakeLists.txt  FrankWolfe.cpp  FrankWolfe.h  LinOpt.cpp  LinOpt.h  LineSearch.cpp  LineSearch.h  PolytopeRepresentation.h  PolytopeTypeEnum.h  ProjectedGradientDescent.cpp  ProjectedGradientDescent.h
src/mopmc-src/queries/: AchievabilityQuery.cpp  AchievabilityQuery.h  BaseQuery.h  CMakeLists.txt  ConvQuery.cpp  ConvQuery.h  ConvexQuery.cpp  ConvexQuery.h  ConvexxQuery.h  GpuConvexQuery.cpp  GpuConvexQuery.h  GpuConvexQueryAlt.cpp  GpuConvexQueryAlt.h  HybridQuery.cpp  HybridQuery.h  TestingQuery.cpp  TestingQuery.h
src/mopmc-src/solvers/: ActionSelection.h  BaseValueIteration.h  CMakeLists.txt  ConvexQuery.cpp  ConvexQuery.h  CuFunctions.cu  CuFunctions.h  CuVISolver.cpp  CudaOnlyValueIteration.cpp  CudaOnlyValueIteration.h  CudaValueIteration.cu  CudaValueIteration.cuh  Geometry.cpp  Geometry.h  InducedEquationSolver.cpp  InducedEquationSolver.h  IterativeSolver.cpp  IterativeSolver.h  LinearEquationUtils.cpp  LinearEquationUtils.h  OptimalPolicy.cpp  OptimalPolicy.h  SolverHelper.cpp  SolverHelper.h  ValueIteration.cpp  ValueIteration.h
src/mopmc-src/storm-wrappers/: CMakeLists.txt  StormModelBuildingWrapper.cpp  StormModelBuildingWrapper.h  StormModelCheckingWrapper.h
src/storm-src/: CMakeLists.txt  ExplicitModelBuilder.cpp  ExplicitModelBuilder.h  RewardModelBuilder.cpp  RewardModelBuilder.h  TransitionMatrixBuilder.cpp  TransitionMatrixBuilder.h
test/: CMakeLists.txt  matrix_tests.cpp
